# LearnVisualization

./: .gitignore  DEEP_RESEARCH_PROMPTS.md  DESIGN.md  MODULE_SPECS.md  README.md  RESEARCH_WORKFLOW.md  TASK.md  TASK_V2.md  build-all-modules.sh  generate.py  next.config.js  package-lock.json  package.json  tailwind.config.ts  test_generate.py  tsconfig.json  tsconfig.tsbuildinfo
.claude/: settings.local.json
agent-backend/: .env.example  README.md  patch_existing_courses.py  pyproject.toml
agent-backend/app/: common.py  component_writer.py  job_store.py  main.py  models.py  pipeline.py  prompt_assets.py  provider.py  quality.py  workflow.py
agent-backend/tests/: test_course_crud.py  test_job_pipeline.py  test_normalize.py  test_promote_gate.py  test_provider_swap.py
courses/: README.md
design/: 01-learning-principles.md  02-content-model.md  03-rendering-contract.md  04-agent-contract.md  05-platform-architecture.md
drafts/: s01-narrative-zh.md
engine/: ARCHITECTURE.md  README.md  course-package-engine.d.mts  course-package-engine.mjs  course-package-engine.test.mjs
research/: 00-overview.md  03-ai-agent-architecture.md  06-design-philosophy-synthesis.md  10-course-schema-v1.md  11-agent-workflow-v1.md  12-engine-directory-structure-v1.md  14-runtime-transition-plan.md  16-course-source-comparison-report.md  17-legacy-source-retirement-plan.md
scripts/: check-authoring.mjs  check-content.mjs  check-course-package.mjs  check-prerender.mjs  check-registry.mjs  check-structure.mjs  compare-course-sources.mjs  export-legacy-from-course-package.mjs  (+3 more)
(+228 files in other folders)
